--- a/YYQHome/Views/Home/YQ.cshtml
+++ b/YYQHome/Views/Home/YQ.cshtml
@@ -1,10 +1,8 @@
-﻿@{
-    Layout = null;
-}
-
+﻿@{Layout = null;}
+@using Model;
+@{List<MProject> datas = ViewBag.Datas;}
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="Robots" content="All" />
@@ -14,14 +12,19 @@
     <meta name="description" content="AQiu个人主页,YYQ个人主页,YYQ,AQiu" /> 
     <title>AQiu个人主页</title>
     <link href="/Content/YQ/Style/YQ.css" rel="stylesheet" />
-      <!--[if lt IE 7.]>
-    <script type="text/javascript" src="/JS/ie6Png.js"></script>
-    <link rel="stylesheet" type="text/css" href="/Content/YQ/Style/main.ie6.css" />
+    <!--[if IE 6]>
+    <script src="http://manager.91.com/templets/default/iphone/script/png.js"></script>
+    <script type="text/javascript">
+    DD_belatedPNG.fix('.png');
+    </script>
     <![endif]--></head>
 <body style="overflow-x:auto;">
-    <div class="logoArea pngPic" style="z-index:5;">
-          <img src="/Content/YQ/Style/Images/logo.png" />
+    <!--LOGO-->
+    <div class="logoArea" style="z-index:5;">
+          <img class="png" src="/Content/YQ/Style/Images/logo.png" />
     </div>
+    <!--LOGO-->
+    <!--左边导航-->
     <div class="leftBgArea">
         <div class="leftNav">
             <ul id="leftNavBox">
@@ -58,6 +61,7 @@
             </ul>
         </div>
     </div>
+    <!--左边导航-->
     <div class="mainArea">
         <!--首页-->
         <div id="pos_Home" class="contentItem homeBox borderRdius">
@@ -112,9 +116,33 @@
         <!--我做过的项目-->
         <div id="pos_Project" class="contentItem projectBox borderRdius">
             <div class="projectDetail borderRdius">
-                 @RenderPage("Projects.cshtml")
+            <div class="AllContent">
+                <!--JS封装-->
+                @{var num=0;}
+                @foreach (var itemProject in datas) {
+                    <div class="ItemContent">
+                        <div class="ContentTitle"><span>-</span><span>@itemProject.TypeName</span></div>
+                        <div class="ContentDetail">
+                            <ul>
+                                @foreach (var itemDetial in itemProject.projectDetailDatas) {
+                                     <li><a href="@itemDetial.Url" target="_blank">@itemDetial.Title</a></li>
+                                }
+                                <li><a href="javascript:;">等... ...</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                   num++;
+                   if (num != 0 && num % 3 == 0) { 
+                        <!-- 分隔线 -->
+                        <div class="clearFloat"></div>
+                        <!-- 分隔线 -->
+                    }
+                }
+
             </div>
-           
+
+
+            </div>
         </div>
         <!--我做过的项目-->
         <!--留言-->
@@ -130,8 +158,8 @@
         <!--留言-->
     </div>
     <script src="/JS/jquery.1.9.1.min.js" type="text/javascript"></script>
-    <script src="/JS/jquery.easing.min.js"></script>
-    <script src="/JS/SFLYQ.Helper.js"></script>
-    <script src="/JS/YQ.js"></script>
+    <script src="/JS/jquery.easing.min.js" type="text/javascript"></script>
+    <script src="/JS/SFLYQ.Helper.js" type="text/javascript"></script>
+    <script src="/JS/YQ.js" type="text/javascript"></script>
 </body>
 </html>
