--- a/YYQHome/Views/Home/YQ.cshtml
+++ b/YYQHome/Views/Home/YQ.cshtml
@@ -155,6 +155,14 @@
         </div>
         <!--留言-->
     </div>
+
+
+    <div class="footer">
+        <p>SFLYQ (moepet.info) All rights reserved
+		    <a href="javascript:;" class="home">添加到收藏夹</a>
+            <a href="javascript:;"  class="home">设为首页</a>
+        </p>
+    </div>
     <script src="/JS/jquery.1.9.1.min.js" type="text/javascript"></script>
     <script src="/JS/jquery.easing.min.js" type="text/javascript"></script>
     <script src="/JS/SFLYQ.Helper.js" type="text/javascript"></script>
